sub kv text animation ie bug

--- a/tomato/assets/css/style.css
+++ b/tomato/assets/css/style.css
@@ -230,8 +230,8 @@ input[type="search"]::-webkit-search-decoration {-webkit-appearance: none;}
 
 /* key visual */
 .kv_wrap {position: relative; overflow: hidden; width: 100%; height: 52.7rem; /* padding-bottom: 27.69%; */}
-.kv_wrap .kv_bg {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%) scale(1); width: 100%; height: 100%; background-repeat: no-repeat; background-position: top center; background-size: cover; animation: bgScale 5s ease-in-out 1; animation-fill-mode : both;}
-.kv_wrap .kv_text { /* position: absolute; bottom: 10.2rem; transform: translateY(3rem); */ width: 100%; margin: 0 auto; padding-top: 32.5rem; font-size: 3.2rem; color: #fff; font-weight: 700; line-height: 1.5625; opacity: 0; visibility: hidden; animation: txtAni 1s ease-in-out .7s 1; animation-fill-mode : both;}
+.kv_wrap .kv_bg {position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%) scale(1); width: 100%; height: 100%; background-repeat: no-repeat; background-position: top center; background-size: cover; animation: bgScale 5s ease-in-out 1; animation-fill-mode : forwards;}
+.kv_wrap .kv_text { position:relative; /* position: absolute; bottom: 10.2rem; transform: translateY(3rem); */ width: 100%; margin: 0 auto; padding-top: 32.5rem; font-size: 3.2rem; color: #fff; font-weight: 700; line-height: 1.5625; opacity: 0; visibility: hidden; animation: txtAni 1s ease-in-out .7s 1; animation-fill-mode : forwards;}
 .kv_wrap .kv_text .txt {display: inline-block; text-align: left; word-break: keep-all;}
 .kv_wrap .kv_text .txt small {display: block; margin-top: 1.5rem; font-size: 2rem; line-height: 3rem;}
 .kv_wrap .kv_products .kv_bg {background-image: url(../images/kv_prod_intro.jpg);}
